fix overflow x

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,8 @@ body{
     color: white;
     margin: 0;
     padding: 0;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 nav{
